# LR

./: .gitignore  LICENSE  LR.cabal  Readme.md  cabal.project  example.arith  package.yaml  stack.yaml  test.ml
app/: AST.hs  E.hs  Main.hs
control-fixpoint/: CHANGELOG.md  control-fixpoint.cabal
control-fixpoint/src/Control/: Fixpoint.hs
data-map-monoidal/: CHANGELOG.md  data-map-monoidal.cabal
data-map-monoidal/src/Data/Map/Monoidal/: Pretty.hs  Structure.hs
example/: AST.hs  Main.hs  error.sml  example.sml  language.grammar  no-braces.sml  success.sml
gen-lr1-parser/: Article.md  CHANGELOG.md  LR.cabal  arith.grammar  grammar.grammar
gen-lr1-parser/app/: Main.hs
gen-lr1-parser/example/: Main.hs  Parser.hs  language.grammar
gen-lr1-parser/src/: Decision.hs  Grammar.hs  LR0Item.hs  LR1Item.hs  LR1State.hs  RawGrammar.hs  Render.hs  Rule.hs  Symbol.hs  Tables.hs  Transitions.hs
gen-lr1-parser/src/Backend/: AST.hs  DefaultLexer.hs  Example.hs  Example2.hs  Generated.hs  StateMachine.hs
gen-lr1-parser/src/Data/Map/: Monoidal.hs
gen-lr1-parser/src/Data/Map/Monoidal/: Pretty.hs  Structure.hs
gen-lr1-parser/src/Decision/: Pretty.hs  Structure.hs
gen-lr1-parser/src/Frontend/: Parser.hs  Parser0.hs
gen-lr1-parser/src/Grammar/: Check.hs  Example.hs  Pretty.hs  Structure.hs
gen-lr1-parser/src/Interface/: Structure.hs
gen-lr1-parser/src/LR0Item/: Pretty.hs  Structure.hs
gen-lr1-parser/src/LR1Item/: Pretty.hs  Structure.hs
gen-lr1-parser/src/LR1State/: Pretty.hs  Structure.hs
gen-lr1-parser/src/Position/: Pretty.hs  Structure.hs
gen-lr1-parser/src/RawGrammar/: Pretty.hs  Structure.hs
gen-lr1-parser/src/Rule/: Pretty.hs  Structure.hs
gen-lr1-parser/src/State/: Pretty.hs  Structure.hs
gen-lr1-parser/src/Symbol/: Pretty.hs  Structure.hs
gen-lr1-parser/src/Tables/: Pretty.hs  Structure.hs
gen-lr1-parser/src/Term/: Pretty.hs  Structure.hs
lr1-parser-default-lexer/: lr1-parser-default-lexer.cabal
lr1-parser-default-lexer/src/Text/Lexer/: Default.hs
lr1-parser-example/: CHANGELOG.md  lr1-parser-example.cabal
lr1-parser-example/src/: AST.hs  Main.hs  Parser.hs  language.grammar  test.dlog  test.test
lr1-parser-lexeme/: LICENSE  lr1-parser-lexeme.cabal
lr1-parser-lexeme/src/Data/: Lexeme.hs
lr1-parser-pos/: lr1-parser-pos.cabal
lr1-parser-pos/src/Data/Text/: Position.hs
lr1-pretty/: lr1-pretty.cabal
lr1-pretty/src/: Pretty.hs
src/: Action.hs  Colored.hs  Decision.hs  Driver.hs  Exts.hs  First.hs  Fixpoint.hs  Goto.hs  Grammar.hs  Item.hs  LR.hs  LR1.hs  Lex.hs  Lexer.hs  Map.hs  Monoidal.hs  Name.hs  Parse.hs  Point.hs  Position.hs  Pretty.hs  Rule.hs  S.hs  Set.hs  State.hs  Table.hs  Tables.hs  Term.hs  Tree.hs  Typed.hs  Util.hs
src/Backend/: AST.hs  DefaultLexer.hs  Example1.hs  Generated.hs  StateMachine.hs
src/Data/Map/Monoidal/: Pretty.hs  Structure.hs
src/Decision/: Pretty.hs  Structure.hs
src/Driver/: LR1.hs  ParseTree.hs
src/Driver/ParseTree/: Pretty.hs  Structure.hs
src/Goto/: Base.hs  Instances.hs
src/Grammar/: Example.hs  Pretty.hs  Structure.hs
src/Interface/: Structure.hs
src/LR1/: ACTION.hs  ERule.hs  ETyped.hs  FIRST.hs  Fixpoint.hs  Func.hs  GLR.hs  GOTO.hs  Grammar.hs  Item.hs  Lexeme.hs  Map.hs  NonTerm.hs  Parser.hs  Point.hs  Position.hs  Rule.hs  State.hs  Term.hs  Typed.hs  Utils.hs
src/Point/: Base.hs
src/Point/Instances/: IsString.hs  Show.hs
src/Position/: Base.hs  Instances.hs  Pretty.hs  Structure.hs
src/Rule/: Base.hs  Instances.hs  Pretty.hs  Structure.hs
src/State/: Base.hs  Instances.hs  Pretty.hs  Structure.hs
src/Tables/: Pretty.hs  Structure.hs
src/Term/: Pretty.hs  Structure.hs
src/Text/Brick/: DSL.hs  Lexer.hs
src/Text/Brick/Driver/: LR1.hs
