cabal-version:      3.0
name:               LR
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Kirill Andreev
-- maintainer:
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-orphans -Wno-ambiguous-fields
    default-extensions:
      NoFieldSelectors
      DuplicateRecordFields
      OverloadedRecordDot
      LambdaCase
      DerivingStrategies
      BlockArguments
      OverloadedStrings
      DerivingVia
      DeriveAnyClass
      ViewPatterns
      MultiWayIf

library
    import:           warnings
    exposed-modules:
      Backend.StateMachine
      Backend.Example
      Backend.Example1
      Backend.Example2
      Backend.DefaultLexer
      Backend.Generated
      Backend.AST
      Frontend.Parser0
      Data.Map.Monoidal
      Data.Map.Monoidal.Pretty
      Data.Map.Monoidal.Structure
      Decision
      Decision.Pretty
      Decision.Structure
      Fixpoint
      Grammar
      Grammar.Example
      Grammar.Pretty
      Grammar.Structure
      Interface.Structure
      Position
      Position.Pretty
      Position.Structure
      Rule
      Rule.Pretty
      Rule.Structure
      State
      State.Pretty
      State.Structure
      Tables
      Tables.Pretty
      Tables.Structure
      Term
      Term.Pretty
      Term.Structure
    -- other-modules:
    -- other-extensions:
    build-depends:
        array,
        base,
        text,
        containers,
        pretty,
        mtl,
        logict,
        transformers,
        filepath,
        parsec
    hs-source-dirs:   src
    default-language: GHC2024

executable LR
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        LR,
        optparse-applicative,
        split

    hs-source-dirs:   app
    default-language: GHC2024
