cabal-version:      3.0
name:               control-fixpoint
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kirill Andreev
maintainer:         hindmst.one@gmail.com
-- copyright:
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Control.Fixpoint
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0, containers
    hs-source-dirs:   src
    default-language: GHC2021
