cabal-version:      3.0
name:               LR
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Kirill Andreev
-- maintainer:
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-orphans -Wno-ambiguous-fields
    default-extensions:
      NoFieldSelectors
      DuplicateRecordFields
      OverloadedRecordDot
      LambdaCase
      DerivingStrategies
      BlockArguments
      OverloadedStrings
      DerivingVia
      DeriveAnyClass
      ViewPatterns
      MultiWayIf

library
    import:           warnings
    exposed-modules:
      Backend.StateMachine
      Frontend.Parser0
      Frontend.Parser
      Data.Map.Monoidal
      Data.Map.Monoidal.Pretty
      Data.Map.Monoidal.Structure
      Decision
      Decision.Pretty
      Decision.Structure
      Fixpoint
      Grammar
      Grammar.Check
      Grammar.Pretty
      Grammar.Structure
      RawGrammar
      RawGrammar.Pretty
      RawGrammar.Structure
      Interface.Structure
      LR1Item
      LR1Item.Pretty
      LR1Item.Structure
      Rule
      Rule.Pretty
      Rule.Structure
      LR1State
      LR1State.Pretty
      LR1State.Structure
      Tables
      Tables.Pretty
      Tables.Structure
      Symbol
      Symbol.Pretty
      Symbol.Structure
    -- other-modules:
    -- other-extensions:
    build-depends:
        array,
        base,
        text,
        containers,
        pretty,
        mtl,
        logict,
        transformers,
        filepath,
        parsec,
        lr1-parser-pos,
        lr1-parser-lexeme,
        lr1-parser-default-lexer,
    hs-source-dirs:   src
    default-language: GHC2024

executable gen-lr1-parser
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        LR,
        optparse-applicative,
        split,

    hs-source-dirs:   app
    default-language: GHC2024
