cabal-version:      3.0
name:               LR
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Kirill Andreev
-- maintainer:
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-orphans -Wno-ambiguous-fields
    default-extensions:
      NoFieldSelectors
      DuplicateRecordFields
      OverloadedRecordDot
      LambdaCase
      DerivingStrategies
      BlockArguments
      OverloadedStrings
      OverloadedLists
      DerivingVia
      DeriveAnyClass
      ViewPatterns
      MultiWayIf

library
    import:           warnings
    exposed-modules:
      Frontend.Parser
      Decision
      Grammar
      Grammar.Check
      RawGrammar
      LR1Item
      LR0Item
      Rule
      LR1State
      Tables
      Symbol
      Render
      Transitions
    -- other-modules:
    -- other-extensions:
    build-depends:
        array,
        base,
        text,
        containers,
        pretty,
        mtl,
        logict,
        transformers,
        filepath,
        parsec,
        lr1-parser-pos,
        lr1-parser-lexeme,
        lr1-parser-default-lexer,
        data-map-monoidal,
        control-fixpoint,
        shower,
        mainland-pretty,
        lr1-pretty,
    hs-source-dirs:   src
    default-language: GHC2024

executable gen-lr1-parser
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        lr1-parser-default-lexer,
        text,
        pretty,
        base,
        LR,
        optparse-applicative,
        split,

    hs-source-dirs:   app
    default-language: GHC2024
