cabal-version:      3.0
name:               lr1-parser-default-lexer
version:            0.1.0.0
synopsis:           Lexeme for parser and lexer
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kirill Andreev
maintainer:         hindmst.one@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    default-extensions:
        LambdaCase
        BlockArguments
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings

library
    import:           warnings
    exposed-modules:  Text.Lexer.Default
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.2.0,
        text,
        mtl,
        containers,
        lr1-parser-pos,
        lr1-parser-lexeme,
    hs-source-dirs:   src
    default-language: GHC2021
