cabal-version:      3.0
name:               lr1-parser-example
version:            0.1.0.0
synopsis:           Lexeme for parser and lexer
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kirill Andreev
maintainer:         hindmst.one@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    default-extensions:
        LambdaCase
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings

executable lr1-parser-example
    import:           warnings
    main-is:          Main.hs
    other-modules:    AST, Parser
    -- other-extensions:
    build-depends:
        base,
        shower,
        text,
        lr1-parser-pos,
        lr1-parser-lexeme,
        lr1-parser-default-lexer,

    hs-source-dirs:   src
    default-language: GHC2024
