cabal-version:      3.0
name:               lr1-pretty
version:            0.1.0.0
synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kirill Andreev
maintainer:         hindmst.one@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    default-extensions:
        OverloadedStrings
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedRecordDot

library
    import:           warnings
    exposed-modules:  Pretty
    -- other-modules:
    -- other-extensions:
    build-depends:    base, text, pretty
    hs-source-dirs:   src
    default-language: GHC2021
